# fasm

./: CMakeLists.txt  README.md
data/: test_patgrow_data.fp  test_patgrow_data.txt  unit_test_data.fp  unit_test_data.txt
data/MUTAG/: edit_costs.txt
executables/: create_sged_matrix.cpp  ecml.cpp  exact_fasm.cpp  generalized_FSM.cpp  test_patgrow.cpp  unit_test.cpp
logs/: MUTAG_RING_T1.txt  MUTAG_T1.txt  MUTAG_T2.txt  MUTAG_T3.txt  MUTAG_max_size_10.txt  MUTAG_max_size_6.txt  MUTAG_no_edge_labels.txt  NCI1_max_size_6.txt  NCI_T3.txt  PTC_MR_no_edge_labels.txt  log.txt
src/: call_FSG.cpp  call_FSG.h  call_FSG_test.h  cross_validation.cpp  cross_validation.h  gi_nauty.cpp  gi_nauty.h  gi_nauty_test.h  gi_weisfeiler_leman.cpp  gi_weisfeiler_leman.h  gi_weisfeiler_leman_test.h  graph.cpp  graph.h  graph_test.h  pattern_growth.cpp  pattern_growth.h  pattern_growth_test.h  read_FSG_file.cpp  read_FSG_file.h  read_FSG_file_test.h  read_TUDataset.cpp  read_TUDataset.h  read_TUDataset_test.h  sged_gedlib.cpp  sged_gedlib.h  sged_gedlib_test.h  utils.cpp  utils.h
